kubernetes/apps/tugas-5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tugas-5-cc-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true" # SSL cert di container
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tugas-5-cc-service
            port:
              number: 80
